--- a/lab03/text-02-gpt2.ipynb
+++ b/lab03/text-02-gpt2.ipynb
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,10 @@
       "\"\n",
       "\n",
       "Top-0.9 (Nucleus) Sampling:\n",
-      " He was a good man, and of noble character. He seemed to be a very intelligent man, and told me that I should probably do well in our court at the end of this year, as I would have a chance of coming to my first meeting of the year. Then, he said, I should be pleased to meet my new friend again. I said that, I had a very good impression of you. He gave me a warm welcome, and he said, I'd better tell him if you could come and go. I told him my feelings, he said, and went away with his wife. The next day, in a small carriage which I did not see of, I told my friend, and left the carriage to go to London. It was an interesting\n"
+      " He was a good man, and of noble character. He seemed to be a very intelligent man, and told me that I should probably do well in our court at the end of this year, as I would have a chance of coming to my first meeting of the year. Then, he said, I should be pleased to meet my new friend again. I said that, I had a very good impression of you. He gave me a warm welcome, and he said, I'd better tell him if you could come and go. I told him my feelings, he said, and went away with his wife. The next day, in a small carriage which I did not see of, I told my friend, and left the carriage to go to London. It was an interesting\n",
+      "\n",
+      "Temperature Sampling (0.7):\n",
+      " He seemed to have just finished his last book and was about to enter an argument with me at a dinner which was going on. With a great deal of emotion, he was obliged to turn away, after his father had been sent to put me to sleep. The conversation was very lively, and I was very surprised to find him quite engrossed in it. He seemed to be very fond of me, and he had already sent me a letter, which was very interesting to me. The gentleman thought that he was going to make a new friend and sent me a copy of his old edition with his name written on the back. After I had read it, he sent me a letter, which he said I could not read. He went on to say that the man had\n"
      ]
     }
    ],
