--- a/lab04/text-01-clm.ipynb
+++ b/lab04/text-01-clm.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dorot\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, Trainer, TrainingArguments\n",
     "from datasets import load_dataset"
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'abstract': 'Purpose The identification of abnormalities that are relatively rare within otherwise normal anatomy is a major challenge for deep learning in the semantic segmentation of medical images. The small number of samples of the minority classes in the training data makes the learning of optimal classification challenging, while the more frequently occurring samples of the majority class hamper the generalization of the classification boundary between infrequently occurring target objects and classes. In this paper, we developed a novel generative multi-adversarial network, called Ensemble-GAN, for mitigating this class imbalance problem in the semantic segmentation of abdominal images.Method The Ensemble-GAN framework is composed of a single-generator and a multi-discriminator variant for handling the class imbalance problem to provide a better generalization than existing approaches. The ensemble model aggregates the estimates of multiple models by training from different initializations and losses from various subsets of the training data. The single generator network analyzes the input image as a condition to predict a corresponding semantic segmentation image by use of feedback from the ensemble of discriminator networks. To evaluate the framework, we trained our framework on two public datasets, with different imbalance ratios and imaging modalities: the Chaos 2019 and the LiTS 2017.Result In terms of the F1 score, the accuracies of the semantic segmentation of healthy spleen, liver, and left and right kidneys were 0.93, 0.96, 0.90 and 0.94, respectively. The overall F1 scores for simultaneous segmentation of the lesions and liver were 0.83 and 0.94, respectively.Conclusion The proposed Ensemble-GAN framework demonstrated outstanding performance in the semantic segmentation of medical images in comparison with other approaches on popular abdominal imaging benchmarks. The Ensemble-GAN has the potential to segment abdominal images more accurately than human experts.',\n",
+       " 'country': 'US'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_dataset[0]"
    ]
@@ -92,27 +113,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 500/500 [00:01<00:00, 379.79 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Tokenize the Dataset using the GPT-2 tokenizer\n",
     "# Hint: Use the `map` method of the dataset object\n",
     "model_name = \"gpt2\"\n",
-    "tokenizer = ...\n",
-    "tokenizer.pad_token = ...  # Set padding token to EOS token\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer.pad_token = tokenizer.eos_token  # Set padding token to EOS token\n",
     "\n",
     "def tokenize_function(samples):\n",
     "    # Tokenize the text column `abstract` in the dataset (set `truncation=True` and `padding=\"max_length\"`)\n",
     "    # NOTE: You can either use tokenzier as a global variable, or\n",
     "    # use a closure to capture the tokenizer variable\n",
-    "    return ...\n",
+    "    return tokenizer(samples['abstract'], padding=\"max_length\", truncation=True)\n",
     "\n",
     "# NOTE: you should map the dataset using the tokenize function. \n",
     "# (You can optionally consider using the argument `batched=True` for better performance,\n",
     "# as long as tokenize_function can handle the batch! [note2: the tokenizer can do that!])\n",
-    "tokenized_dataset = ...\n",
-    "tokenized_dataset_eval = ...\n"
+    "tokenized_dataset = train_dataset.map(tokenize_function, batched=True)\n",
+    "tokenized_dataset_eval = eval_dataset.map(tokenize_function, batched=True)\n"
    ]
   },
   {
@@ -127,18 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 500/500 [00:00<00:00, 674.50 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Add labels to the dataset\n",
     "def add_labels(samples):\n",
     "    # NOTE: The labels, in causal modeling, should be the same as the input_ids\n",
-    "    samples[\"labels\"] = ...\n",
+    "    samples[\"labels\"] = samples['input_ids']\n",
     "    return samples\n",
     "\n",
-    "tokenized_dataset = ...\n",
-    "tokenized_dataset_eval = ..."
+    "tokenized_dataset = tokenized_dataset.map(add_labels, batched=True)\n",
+    "tokenized_dataset_eval = tokenized_dataset_eval.map(add_labels, batched=True)"
    ]
   },
   {
@@ -159,9 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dorot\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:666: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Set Training Parameters\n",
     "training_args = TrainingArguments(\n",
@@ -177,7 +234,7 @@
     ")\n",
     "\n",
     "# TODO: Initialize GPT-2 Model\n",
-    "model = ...\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
     "model.resize_token_embeddings(len(tokenizer))\n",
     "\n",
     "# TODO: Fine-Tune the Model with the `Trainer` method and pass also the eval_dataset \n",
@@ -219,16 +276,16 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
     "# TODO: Load the pre-trained and fine-tuned GPT-2 models\n",
-    "pretrained_model = ...\n",
-    "finetuned_model = ...\n",
+    "pretrained_model = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
+    "finetuned_model = AutoModelForCausalLM.from_pretrained(\"./gpt2-medical-finetuned\")\n",
     "\n",
     "# TODO: Tokenize the prompt\n",
-    "tokenizer = ...\n",
-    "tokenizer.pad_token = ...\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
     "prompt = \"The patient presents with chest pain and shortness of breath.\"\n",
     "\n",
-    "inputs = ...\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
     "input_ids = inputs['input_ids']"
    ]
   },
@@ -239,8 +296,8 @@
    "outputs": [],
    "source": [
     "# TODO: Generate Output of the Model Before Fine-Tuning (use `generate` and then `decode` methods of the model and tokenizer) \n",
-    "output_pretrained = ...\n",
-    "generated_pretrained = ...\n",
+    "output_pretrained = pretrained_model.generate(input_ids, max_length=50, num_return_sequences=1)\n",
+    "generated_pretrained = tokenizer.decode(output_pretrained[0], skip_special_tokens=True)\n",
     "\n",
     "print(\"**Before Fine-Tuning (Pre-Trained GPT-2)**:\")\n",
     "print(generated_pretrained)"
@@ -301,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
