--- a/lab05/text-01-quantization.ipynb
+++ b/lab05/text-01-quantization.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,10 +50,8 @@
     "\n",
     "n_rows = 3\n",
     "n_cols = 5\n",
-    "\n",
-    "# TODO: Create two random tensors, W (of shape n_rows, n_cols) and x (of shape n_cols)\n",
-    "W = ...\n",
-    "x = ...\n",
+    "W = torch.randn(n_rows, n_cols)\n",
+    "x = torch.randn(n_cols)\n",
     "\n",
     "W[0,0] = 0\n",
     "x[0] = 0"
@@ -96,19 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def absmax_quantize(W):\n",
     "    # NOTE: we assume that we always map to 8-bit integers\n",
-    "\n",
-    "    # TODO: find the scale factor that maps the maximum absolute value in W to the maximum value of int8\n",
-    "    max_value = ...\n",
-    "    scale = ... # how \"long\" the step between any two int8 values is\n",
-    "\n",
-    "    # TODO: quantize W using the scale factor (hint: remember to round to the nearest integer and convert to int8)\n",
-    "    W_q = ...\n",
+    "    max_value = W.abs().max()\n",
+    "    scale = 127 / max_value # how \"long\" the step between any two int8 values is\n",
+    "    W_q = (W * scale).round().to(torch.int8)\n",
     "    return W_q, scale"
    ]
   },
@@ -121,14 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def absmax_dequantize(W_q, scale):\n",
-    "    # TODO: dequantize W_q using the scale factor\n",
-    "    dequantized_W = ...\n",
-    "    return dequantized_W"
+    "    return W_q.float() / scale"
    ]
   },
   {
@@ -156,12 +148,9 @@
    "source": [
     "print(W_q)\n",
     "print(W)\n",
-    "\n",
-    "#TODO: dequantize W_q and check how close it is to the original W\n",
-    "W_deq = ...\n",
+    "W_deq = absmax_dequantize(W_q, scale_W)\n",
     "print(W_deq)\n",
-    "W_diff = ...\n",
-    "print(W_diff)"
+    "print((W - W_deq).abs().mean())"
    ]
   },
   {
@@ -172,12 +161,9 @@
    "source": [
     "print(x_q)\n",
     "print(x)\n",
-    "\n",
-    "# TODO: dequantize x_q and check how close it is to the original x\n",
-    "x_deq = ...\n",
+    "x_deq = absmax_dequantize(x_q, scale_x)\n",
     "print(x_deq)\n",
-    "x_diff = ...\n",
-    "print(x_diff)"
+    "print((x - x_deq).abs().mean())"
    ]
   },
   {
@@ -198,7 +184,7 @@
    "outputs": [],
    "source": [
     "# TODO: perform the matrix multiplication using the quantized values\n",
-    "product = ... \n",
+    "product = W_q @ x_q\n",
     "print(product)"
    ]
   },
@@ -232,7 +218,7 @@
    "outputs": [],
    "source": [
     "# TODO: perform the matrix multiplication using the quantized values converted to int16\n",
-    "out_q = ... \n",
+    "out_q = W_q.to(torch.int16) @ x_q.to(torch.int16) \n",
     "print(out_q)"
    ]
   },
@@ -258,9 +244,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: dequantize the result and check how close it is to the original result\n",
-    "out_deq = ...\n",
-    "\n",
+    "out_deq = absmax_dequantize(absmax_dequantize(out_q, scale_W), scale_x)\n",
+    "# Or, alternatively:\n",
+    "# out_deq = out_q / scale_W / scale_x\n",
+    "# out_deq = absmax_dequantize(out_q, scale_W * scale_x)\n",
     "print(out_deq)\n",
     "print(out)"
    ]
@@ -279,7 +266,7 @@
    "outputs": [],
    "source": [
     "#TODO: check the difference between the original and the dequantized result\n",
-    "out_diff = ..."
+    "out_diff = (out_deq - out).abs().mean()\n"
    ]
   },
   {
@@ -294,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,21 +292,14 @@
     "    # by combining the two, we get that:\n",
     "    # W_q = W * scale + offset\n",
     "    # we will call the offset \"zero_point\", as it represent the value that maps to 0\n",
-    "    \n",
-    "    # TODO: find the scale factor that maps the minimum and maximum values in W to -128 and 127\n",
-    "    delta = ... # the range of values in W\n",
-    "    scale = ...\n",
-    "    zero_point = ... # the value that maps to 0\n",
-    "\n",
-    "    # TODO: quantize W using the scale factor (hint: remember to round to the nearest integer and convert to int8)\n",
-    "    W_q = ...\n",
-    "    \n",
+    "    delta = W.max() - W.min()\n",
+    "    scale = 255 / delta\n",
+    "    zero_point = -(128*W.max() + 127*W.min()) / delta\n",
+    "    W_q = (W * scale + zero_point).round().to(torch.int8)\n",
     "    return W_q, scale, zero_point\n",
     "\n",
     "def minmax_dequantize(W_q, scale, zero_point):\n",
-    "    # TODO: dequantize W_q using the scale factor and zero_point\n",
-    "    dequantized_W = ...\n",
-    "    return dequantized_W"
+    "    return (W_q.float() - zero_point) / scale"
    ]
   },
   {
@@ -347,12 +327,9 @@
    "source": [
     "print(W_q)\n",
     "print(W)\n",
-    "\n",
-    "#TODO: dequantize W_q and check how close it is to the original W\n",
-    "W_deq = ...\n",
+    "W_deq = minmax_dequantize(W_q, scale_W, zero_point_W)\n",
     "print(W_deq)\n",
-    "W_diff = ...\n",
-    "print(W_diff)\n",
+    "print((W - W_deq).abs().mean())\n",
     "print(\"zero point\", zero_point_W)"
    ]
   },
@@ -369,12 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO:  perform the matrix multiplication using the quantized values converted to int16\n",
-    "out_q = ..."
+    "out_q = W_q.to(torch.int16) @ x_q.to(torch.int16)"
    ]
   },
   {
@@ -464,14 +440,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_id = \"meta-llama/Llama-3.2-1B\"\n",
-    "#TODO: load the model and tokenizer \n",
-    "model = ... \n",
-    "tokenizer = ...\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_id)  \n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id) \n",
     "\n",
     "tokenizer.pad_token = tokenizer.eos_token"
    ]
@@ -512,23 +487,18 @@
     "text = \"The secret of life is\"\n",
     "# Notice we use a batch of 20 sentences -- we will get better results\n",
     "# on quantized models when processing a batch of inputs\n",
-    "text = [text]*20\n",
-    "\n",
-    "#TODO: encode the text using the tokenizer\n",
-    "inputs = ...\n",
+    "inputs = tokenizer([text]*20, return_tensors=\"pt\")\n",
     "\n",
     "tic = time.time()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    #TODO: generate the output from the model\n",
-    "    baseline_output = ...\n",
+    "    baseline_output = model.generate(inputs['input_ids'], max_length=100)\n",
     "\n",
     "elapsed_time = time.time() - tic\n",
     "\n",
-    "#TODO: decode the output\n",
-    "baseline_decoded = ...\n",
+    "baseline_decoded = tokenizer.decode(baseline_output[0], skip_special_tokens=True)\n",
     "\n",
-    "print(\"Baseline model output:\", baseline_decoded)\n",
+    "print(\"\\nBaseline model output:\", baseline_decoded)\n",
     "print(\"\\nTime taken for baseline model:\", elapsed_time)"
    ]
   },
@@ -560,6 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "quantized_model = torch.quantization.quantize_dynamic(\n",
     "    model, {torch.nn.Linear}, dtype=torch.qint8\n",
     ").to('cpu')\n",
@@ -599,15 +570,13 @@
     "tic = time.time()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    #TODO: generate the output from the quantized model\n",
-    "    output = ...\n",
+    "    output = quantized_model.generate(inputs['input_ids'], max_length=100)\n",
     "\n",
     "elapsed_time = time.time() - tic\n",
     "\n",
-    "#TODO: decode the output\n",
-    "output_decoded = ...\n",
+    "output_decoded = tokenizer.decode(baseline_output[0], skip_special_tokens=True)\n",
     "\n",
-    "print(\"Quantized model output:\", output_decoded)\n",
+    "print(\"\\nQuantized model output:\", output_decoded)\n",
     "print(\"\\nTime taken for baseline model:\", elapsed_time)"
    ]
   },
@@ -645,13 +614,11 @@
     "tic = time.time()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    #TODO: generate the output from the quantized model\n",
-    "    output = ...\n",
+    "    output = quantized_model.generate(inputs['input_ids'], max_length=100)\n",
     "\n",
     "elapsed_time = time.time() - tic\n",
     "\n",
-    "#TODO: decode the output\n",
-    "output_decoded = ...\n",
+    "output_decoded = tokenizer.decode(baseline_output[0], skip_special_tokens=True)\n",
     "\n",
     "print(\"\\nquantized model output:\", output_decoded)\n",
     "print(\"\\nTime taken for baseline model:\", elapsed_time)"
