Add LAB5.2 LoRA notebook (without training checkpoints)

--- a/lab05/text-02-LoRA.ipynb
+++ b/lab05/text-02-LoRA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = \"bert-base-uncased\"\n",
     "model = BertForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
@@ -85,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 109483778 || all params: 109483778 || trainable%: 100.00\n"
+     ]
+    }
+   ],
    "source": [
     "print_trainable_parameters(model)"
    ]
@@ -105,10 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch import randn, matmul\n",
+    "\n",
     "class LoRA(nn.Module):\n",
     "    def __init__(self, original_layer, rank=8):\n",
     "        super(LoRA, self).__init__()\n",
@@ -125,10 +144,10 @@
     "        # The output is the original layer output plus the low-rank adaptation\n",
     "\n",
     "        # LoRA output\n",
-    "        ...\n",
+    "        Lora_output = x @ self.A @ self.B \n",
     "\n",
-    "        # layer output, which combines the original output with the LoRA one \n",
-    "        return ..."
+    "        # layer output, which combines the original output with the LoRA one\n",
+    "        return self.original_layer(x) + Lora_output"
    ]
   },
   {
@@ -140,14 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "for layer in model.bert.encoder.layer:\n",
     "    layer.attention.self.query = LoRA(layer.attention.self.query)\n",
-    "    ..."
+    "    layer.attention.self.key = LoRA(layer.attention.self.key)\n",
+    "    layer.attention.self.value = LoRA(layer.attention.self.value)\n",
+    "    layer.attention.output.dense = LoRA(layer.attention.output.dense)\n",
+    "    layer.intermediate.dense = LoRA(layer.intermediate.dense)\n",
+    "    layer.output.dense = LoRA(layer.output.dense)"
    ]
   },
   {
@@ -161,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 1327104 || all params: 110810882 || trainable%: 1.20\n"
+     ]
+    }
+   ],
    "source": [
     "print_trainable_parameters(model)"
    ]
@@ -209,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,9 +322,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='64' max='32' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [32/32 03:36]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on the validation set: 0.5130\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model\n",
     "results = trainer.evaluate()\n",
@@ -302,18 +359,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='63' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [63/63 17:49, Epoch 1/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Model Preparation Time</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.700300</td>\n",
+       "      <td>0.678979</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.517000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>0.653700</td>\n",
+       "      <td>0.573479</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.793000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>0.523000</td>\n",
+       "      <td>0.452408</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.847000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>40</td>\n",
+       "      <td>0.451400</td>\n",
+       "      <td>0.404644</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.862000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50</td>\n",
+       "      <td>0.416800</td>\n",
+       "      <td>0.399780</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.856000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60</td>\n",
+       "      <td>0.357600</td>\n",
+       "      <td>0.379841</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.871000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "results = trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='32' max='32' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [32/32 00:49]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on the validation set: 0.8690\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model\n",
     "results = trainer.evaluate()\n",
@@ -336,9 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = \"bert-base-uncased\"\n",
     "model = BertForSequenceClassification.from_pretrained(model_name)\n",
@@ -362,9 +527,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dorot\\AppData\\Roaming\\Python\\Python311\\site-packages\\peft\\tuners\\tuners_utils.py:196: UserWarning: Already found a `peft_config` attribute in the model. This will lead to having multiple adapters in the model. Make sure to know what you are doing!\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from peft import LoraConfig, get_peft_model, PeftModelForSequenceClassification\n",
     "\n",
@@ -372,7 +546,7 @@
     "    r=8,\n",
     "    lora_alpha=32, \n",
     "    lora_dropout=0.1,\n",
-    "    target_modules=[...],\n",
+    "    target_modules=[\"query\", \"key\", \"value\", \"dense\"],\n",
     ")\n",
     "\n",
     "peft_model = PeftModelForSequenceClassification(model, peft_config=config)"
@@ -380,9 +554,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "peft.peft_model.PeftModelForSequenceClassification"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(peft_model)"
    ]
@@ -396,9 +581,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BertLayer(\n",
+       "  (attention): BertAttention(\n",
+       "    (self): BertSdpaSelfAttention(\n",
+       "      (query): lora.Linear(\n",
+       "        (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (lora_dropout): ModuleDict(\n",
+       "          (default): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (lora_A): ModuleDict(\n",
+       "          (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "        )\n",
+       "        (lora_B): ModuleDict(\n",
+       "          (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (lora_embedding_A): ParameterDict()\n",
+       "        (lora_embedding_B): ParameterDict()\n",
+       "        (lora_magnitude_vector): ModuleDict()\n",
+       "      )\n",
+       "      (key): lora.Linear(\n",
+       "        (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (lora_dropout): ModuleDict(\n",
+       "          (default): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (lora_A): ModuleDict(\n",
+       "          (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "        )\n",
+       "        (lora_B): ModuleDict(\n",
+       "          (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (lora_embedding_A): ParameterDict()\n",
+       "        (lora_embedding_B): ParameterDict()\n",
+       "        (lora_magnitude_vector): ModuleDict()\n",
+       "      )\n",
+       "      (value): lora.Linear(\n",
+       "        (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (lora_dropout): ModuleDict(\n",
+       "          (default): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (lora_A): ModuleDict(\n",
+       "          (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "        )\n",
+       "        (lora_B): ModuleDict(\n",
+       "          (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (lora_embedding_A): ParameterDict()\n",
+       "        (lora_embedding_B): ParameterDict()\n",
+       "        (lora_magnitude_vector): ModuleDict()\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (output): BertSelfOutput(\n",
+       "      (dense): lora.Linear(\n",
+       "        (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (lora_dropout): ModuleDict(\n",
+       "          (default): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (lora_A): ModuleDict(\n",
+       "          (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "        )\n",
+       "        (lora_B): ModuleDict(\n",
+       "          (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "        )\n",
+       "        (lora_embedding_A): ParameterDict()\n",
+       "        (lora_embedding_B): ParameterDict()\n",
+       "        (lora_magnitude_vector): ModuleDict()\n",
+       "      )\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "  )\n",
+       "  (intermediate): BertIntermediate(\n",
+       "    (dense): lora.Linear(\n",
+       "      (base_layer): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "      (lora_dropout): ModuleDict(\n",
+       "        (default): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "      (lora_A): ModuleDict(\n",
+       "        (default): Linear(in_features=768, out_features=8, bias=False)\n",
+       "      )\n",
+       "      (lora_B): ModuleDict(\n",
+       "        (default): Linear(in_features=8, out_features=3072, bias=False)\n",
+       "      )\n",
+       "      (lora_embedding_A): ParameterDict()\n",
+       "      (lora_embedding_B): ParameterDict()\n",
+       "      (lora_magnitude_vector): ModuleDict()\n",
+       "    )\n",
+       "    (intermediate_act_fn): GELUActivation()\n",
+       "  )\n",
+       "  (output): BertOutput(\n",
+       "    (dense): lora.Linear(\n",
+       "      (base_layer): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "      (lora_dropout): ModuleDict(\n",
+       "        (default): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "      (lora_A): ModuleDict(\n",
+       "        (default): Linear(in_features=3072, out_features=8, bias=False)\n",
+       "      )\n",
+       "      (lora_B): ModuleDict(\n",
+       "        (default): Linear(in_features=8, out_features=768, bias=False)\n",
+       "      )\n",
+       "      (lora_embedding_A): ParameterDict()\n",
+       "      (lora_embedding_B): ParameterDict()\n",
+       "      (lora_magnitude_vector): ModuleDict()\n",
+       "    )\n",
+       "    (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "peft_model.bert.encoder.layer[0]"
    ]
@@ -412,9 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 1,340,930 || all params: 110,824,708 || trainable%: 1.2100\n"
+     ]
+    }
+   ],
    "source": [
     "peft_model.print_trainable_parameters()"
    ]
@@ -428,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +759,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='11' max='63' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [11/63 03:16 < 18:57, 0.05 it/s, Epoch 0.16/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='6' max='32' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 6/32 00:49 < 04:15, 0.10 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
@@ -481,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
